[#66300368] updated with feedback from Sarah

--- a/liquid/_includes/voice/core-values.html
+++ b/liquid/_includes/voice/core-values.html
@@ -6,14 +6,14 @@
     <strong>Weniger, aber besser</strong><br>
     Less, but better (Dieter Rams)<br>
     日本語: より少なく、しかしより良く<br>
-    Simplicity in all we do. The communicator, not the receiver, should do the work.
+    Strive for simplicity. The communicator, not the receiver, should do the work.
   </p>
 
   <p>
     <strong>بالشعب و للشعب Bil-shaʿb wa lil-shaʿb</strong><br>
     By the people, for the people<br>
     日本語: 人々により、そして人々のために<br>
-    We democratize translation, making it convenient and accessible to all. We're here to improve the lives of all Gengo people—customers, translators and staff.
+    We democratize translation, making it convenient and accessible to all. We’re here to improve the lives of everyone at Gengo—customers, translators and staff alike.
   </p>
 
   <p>
