--- a/liquid/_includes/voice/style-guide.html
+++ b/liquid/_includes/voice/style-guide.html
@@ -4,14 +4,14 @@
 
   <h3>Spelling</h3>
   <ul>
-    <li>Write Gengo, not gengo</li>
-    <li>Use American spelling, e.g. realize, not realise</li>
+    <li>Use American English, not British English, e.g. realize, not realise</li>
   </ul>
 
   <h3>Capitalization</h3>
   <ul>
+    <li>Always capitalize our company name, i.e. Gengo, not gengo</li>
     <li>Use start case for all buttons and navigation menu items (capitalization of all words, regardless of the part of speech)</li>
-    <li>Use sentence case for marketing copy, including titles</li>
+    <li>Use sentence case for general/marketing copy titles</li>
     <li>Spell out acronyms and abbreviations in capital letters at first mention unless the short form is more common than the long form, e.g. DVD</li>
   </ul>
 
@@ -21,13 +21,17 @@
     <li>Don’t spell out small money amounts, e.g., $0.05, not five cents</li>
     <li>Spell out numbers under 10 and numbers at the start of a sentence
       <ul>
-        <li>Ex: Twelve tigers ate my two dogs for dinner.</li>
+        <li>e.g. Twelve tigers ate my two dogs for dinner.</li>
       </ul>
     </li>
-    <li>Use a hyphen to connect a number ending with “y” to another number, e.g., twenty-seven, not twenty seven</li>
+    <li>Use a hyphen to connect a number ending with “y” to another number
+      <ul>
+        <li>e.g. twenty-seven, not twenty seven</li>
+      </ul>
+    </li>
     <li>Use figures when counting more than one thing
       <ul>
-        <li>Ex: There are 100 people in 1 million organizations.</li>
+        <li>e.g. There are 100 people in 1 million organizations.</li>
       </ul>
     </li>
     <li>Decimals:
@@ -49,7 +53,8 @@
       </ul>
     <li>Do not write in military time. Indicate time of day using using a.m. and p.m. with time zone, if needed
       <ul>
-        <li>Ex: 1:33 p.m. PST, not 13:33</li>
+        <li>e.g. 1:33 p.m. PST, not 13:33</li>
+        <li>e.g. 2:45 p.m., not 2:45 PM</li>
       </ul>
     </li>
   </ul>
@@ -62,10 +67,11 @@
 
   <h4>Commas ( , )</h4>
   <ul>
+    <li>Do not use the Oxford comma</li>
     <li>Use a comma to separate two adjectives (if the word “and” can be inserted)</li>
     <li>Use a comma at the end of certain abbreviations (like i.e. and etc.)
     <ul>
-      <li>Ex: Letters, packages, etc., should go here.</li>
+      <li>e.g. Letters, packages, etc., should go here.</li>
     </ul>
     </li>
     <li>Place commas within quotation marks</li>
@@ -76,24 +82,24 @@
     <li>Always close quotation marks</li>
     <li>Don't use single quotes unless nesting them within double quotes
     <ul>
-      <li>Ex: “The guy was like, ‘That’s ridiculous!’ and I was like, ‘Duh!’”</li>
+      <li>e.g. “The guy was like, ‘That’s ridiculous!’ and I was like, ‘Duh!’”</li>
     </ul>
     </li>
     <li>Periods and commas are always placed within quotation marks
     <ul>
-      <li>Ex: We always preferred to “bear those ills we have.”</li>
-      <li>Ex: “I don’t think so,” she replied.</li>
+      <li>e.g. We always preferred to “bear those ills we have.”</li>
+      <li>e.g. “I don’t think so,” she replied.</li>
       <li>Exception: With computer terms and file names, punctuation is always outside of quotation marks to avoid error
       <ul>
-        <li>Ex: Click on Save As; name your file “appendix A, v. 10”.</li>
+        <li>e.g. Click on Save As; name your file “appendix A, v. 10”.</li>
       </ul>
       </li>
     </ul>
     </li>
     <li>Exclamation points and question marks are placed outside of quotation marks unless they belong with the quoted matter
     <ul>
-      <li>Ex: Which of Shakespeare’s characters said, “All the world’s a stage”?</li>
-      <li>Ex: “Where are the cookies?” she asked.</li>
+      <li>e.g. Which of Shakespeare’s characters said, “All the world’s a stage”?</li>
+      <li>e.g. “Where are the cookies?” she asked.</li>
     </ul>
     </li>
     <li>Semicolons and colons are placed outside of quotation marks</li>
@@ -104,12 +110,12 @@
     <li>In general, use sparingly</li>
     <li>Use to connect two independent clauses
     <ul>
-      <li>Ex: There are 30 pages to the proposal; don't get discouraged.</li>
+      <li>e.g. There are 30 pages to the proposal; don't get discouraged.</li>
     </ul>
     </li>
     <li>Use for a list of items that contain internal punctuation
     <ul>
-      <li>Ex: We traveled to New Orleans, Louisiana; San Francisco, California; and Seattle, Washington.</li>
+      <li>e.g. We traveled to New Orleans, Louisiana; San Francisco, California; and Seattle, Washington.</li>
     </ul>
     </li>
   </ul>
@@ -118,7 +124,7 @@
   <ul>
     <li>Don't use apostrophes for plurals of acronyms, abbreviations and years
     <ul>
-      <li>Ex: CPUs, not CPU’s; the 1990s, not the 1990’s</li>
+      <li>e.g. CPUs, not CPU’s; the 1990s, not the 1990’s</li>
     </ul>
     </li>
   </ul>
@@ -128,7 +134,7 @@
     <li>Use hyphens (-) in URLs, email addresses, compound words and number spans</li>
     <li>Em dashes (—) often have the same function as commas, parentheses and colons when setting off distinct thoughts within sentences
     <ul>
-      <li>Ex: My friends—that is, my former friends—ganged up on me.</li>
+      <li>e.g. My friends—that is, my former friends—ganged up on me.</li>
     </ul>
     </li>
     <li>Don’t use double hyphens (--) to replace dashes</li>
