--- a/liquid/_includes/voice/users.html
+++ b/liquid/_includes/voice/users.html
@@ -8,15 +8,15 @@
     <li>Translators</li>
   </ul>
 
-  <p>All of our users are important (by the people, for the people) and our communications should reflect this: if you’re talking about system-wide changes, say “improve your Gengo experience” or “improve the user experience,” not “improve the customer experience.”</p>
+  <p>All of our users are important (by the people, for the people) and our communications should reflect this. If you’re talking about system-wide changes, for example, say “improve your Gengo experience” or “improve the user experience,” not “improve the customer experience.”</p>
 
   <h3>Who are our customers?</h3>
 
   <h4>Diverse</h4>
-  <p>They are a mix of individuals, localization project managers, marketing professionals and product staff looking to translate a wide range of content (personal letters, user-generated reviews, product descriptions, etc.). They come from many countries and industries. Some are deeply familiar with localization processes and others are translating for the first time.</p>
+  <p>They are a mix of individuals, localization project managers, marketing professionals and product staff looking to translate a wide range of content (personal letters, user-generated reviews, product descriptions, etc.). They come from many countries and industries. Some are deeply familiar with translation processes and others are translating for the first time.</p>
 
   <h4>Strategic</h4>
-  <p>They are searching for a cheap and efficient alternative to a traditionally expensive and cumbersome process. Because Gengo is easy to use and more affordable than many translation services, some are considering translation for the first time. They make informed decisions based on the intersection of speed, quality and cost.</p>
+  <p>They are searching for a cheap and efficient alternative to a traditionally expensive and cumbersome process. They make informed decisions based on the intersection of speed, quality and cost.</p>
 
   <h4>Busy</h4>
   <p>They believe in getting things done and dislike unnecessary distractions. They value tools that work well and information that is useful.</p>
