--- a/scss/_editable-text.scss
+++ b/scss/_editable-text.scss
@@ -123,9 +123,23 @@ a[data-placeholder="Required"] ~ .editable-inline {
 .select2-container-multi {
   .select2-choices {
     height: $editable-control-height !important;
+    color: $input-color;
+    background: $input-bg;
+    border-color: $input-border;
     border-radius: $editable-border-radius;
+
     .select2-search-choice {
       margin-top: 4px;
+      background: #fff;
+      border-color: $input-border;
+      box-shadow: none;
+      color: $text-color;
+      font-size: $font-size-small;
+
+      .select2-search-choice-close {
+        top: 50%;
+        margin-top: -7px;
+      }
     }
   }
   &.select2-container-active .select2-choices {
@@ -139,11 +153,10 @@ a[data-placeholder="Required"] ~ .editable-inline {
 }
 
 .select2-dropdown-open .select2-choices {
-  border-color: $editable-border-color;
-  border-bottom: 0;
-
   @include border-top-radius($editable-border-radius);
   @include border-bottom-radius(0);
+  border-color: $editable-border-color;
+  border-bottom: 0;
 }
 
 .select2-drop-active {
@@ -154,8 +167,19 @@ a[data-placeholder="Required"] ~ .editable-inline {
 .select2-container {
   .select2-choice {
     height: $editable-control-height;
+    background: $input-bg;
+    color: $text-color;
+    border-color: $input-border;
+
     abbr {
-      top: 7px;
+      top: 50%;
+      right: 18px;
+      margin-top: -7px;
+    }
+
+    .select2-arrow {
+      border: 0;
+      background: transparent;
     }
   }
 }
