[#76253826] update input related CSS & HTML

--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -2,7 +2,6 @@
   <h1 id="control-sizing">Control sizing</h1>
   <hr/>
 
-
   <h2>Height</h2>
   <div class="bs-example">
     <div class="form-group">
@@ -24,24 +23,24 @@
   <br>
   <div class="bs-example">
     <div class="form-group">
-      <select class="form-control input-lg">
-        <option>input-lg</option>
-        <option>input-lg</option>
-        <option>input-lg</option>
+      <select class="form-control input-lg" style="color: #a6a3a1;">
+        <option>input-lg-1</option>
+        <option>input-lg-2</option>
+        <option>input-lg-3</option>
       </select>
     </div>
     <div class="form-group">
-      <select class="form-control input-md">
-        <option>input-md</option>
-        <option>input-md</option>
-        <option>input-md</option>
+      <select class="form-control input-md" style="color: #a6a3a1;">
+        <option>input-md-1</option>
+        <option>input-md-2</option>
+        <option>input-md-3</option>
       </select>
     </div>
     <div class="form-group">
-      <select class="form-control input-sm">
-        <option>input-sm</option>
-        <option>input-sm</option>
-        <option>input-sm</option>
+      <select class="form-control input-sm" style="color: #a6a3a1;">
+        <option>input-sm-1</option>
+        <option>input-sm-2</option>
+        <option>input-sm-3</option>
       </select>
     </div>
   </div>
@@ -49,8 +48,10 @@
 {% highlight html %}
 <select class="form-control input-lg">
   <option>input-lg</option>
+  ...
 </select>
 {% endhighlight %}
+
   <h2>Column sizing</h2>
   <form class="form row" role="form">
     <div class="form-group input-sm col-xs-2">
@@ -77,6 +78,7 @@
   </div>
 </form>
 {% endhighlight %}
+
   <h2>Help text</h2>
   <div class="form-group">
     <input type="text" class="form-control input-sm">
