--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -215,10 +215,10 @@ $btn-developer-border:           darken($btn-developer-bg, 5%) !default;
 //** `<input>` background color
 $input-bg:                       #f9f9f9 !default;
 //** `<input disabled>` background color
-$input-bg-disabled:              $gray-lighter !default;
+$input-bg-disabled:              lighten($gengo-gray, 67.5%) !default;
 
 //** Text color for `<input>`s
-$input-color:                    $gray !default;
+$input-color:                    $text-color !default;
 //** `<input>` border color
 $input-border:                   #ccc !default;
 //** `<input>` border radius
