--- a/liquid/_includes/grid/sidebar-and-box.html
+++ b/liquid/_includes/grid/sidebar-and-box.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-2">
-      <p>ACTIVE TRANSLATIONS</p>
+      <p>Nav Header</p>
       <ul class="nav">
-        <li><a>Logo</a></li>
-        <li><a>Color</a></li>
-        <li><a>Typography</a></li>
-        <li><a>Icons</a></li>
+        <li><a>Nav Pill 1</a></li>
+        <li><a>Nav Pill 2</a></li>
+        <li><a>Nav Pill 3</a></li>
+        <li><a>Nav Pill 4</a></li>
       </ul>
     </div>
     <div class="col-xs-10">
