[#76253826] udpate Editable text related HTML & CSS

--- a/liquid/_includes/components/supported-controls.html
+++ b/liquid/_includes/components/supported-controls.html
@@ -4,7 +4,7 @@
 
   <h2>Inputs</h2>
   <div class="bs-example">
-    <input type="text" class="form-control input-sm" placeholder="Text input">
+    <input type="text" class="form-control input-sm" placeholder="Enter Text here">
   </div>
 <br>
 {% highlight html %}
