[#76253826] udpate doctype icons HTML & CSS

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -297,7 +297,12 @@ body > .container {
 }
 
 .doctype {
-  .item { padding: 24px 0 16px; }
+  .item {
+    padding: 24px 0 20px;
+
+    &.grp { padding-top: 16px; }
+  }
+  .text { margin-top: 5px; }
 }
 
 // Favicons
