--- a/liquid/_includes/style/doctype-icons.html
+++ b/liquid/_includes/style/doctype-icons.html
@@ -5,7 +5,11 @@
   <div class="row">
   {% for doctype in site.data.doctype %}
     <div class="col-xs-3 col-md-2">
+    {% if doctype.class == "doctype-grp" %}
+      <div class="item grp">
+    {% else %}
       <div class="item">
+    {% endif %}
         <span class="{{ doctype.class }}"></span>
         <div class="text">{{ doctype.name }}</div>
       </div>
