[#76419240] fix strange navbaar text margin

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -263,6 +263,7 @@ $workbench-icon-active-color: #fff !default;
     .navbar-text {
       margin-right: 0;
       margin-left: 0;
+      margin-bottom: 0;
     }
     .navbar-text {
       margin-right: 12px;
