[#76419240] refactoring progress bar HTML&CSS

--- a/liquid/_includes/components/progress-bar.html
+++ b/liquid/_includes/components/progress-bar.html
@@ -1,6 +1,7 @@
 <div class="box">
   <h1 id="progress-bar">Progress bar</h1>
   <hr/>
+
   <h2>Basic</h2>
   <div class="bs-example">
     <div class="progress">
@@ -8,7 +9,6 @@
     </div>
   </div>
   <br>
-
 {% highlight html %}
 <div class="progress">
   <div class="progress-bar" role="progressbar" style="width: 60%;"></div>
@@ -47,8 +47,6 @@
     </div>
   </div>
   <br>
-
-
 {% highlight html %}
 <div class="progress">
   <div class="progress-bar" role="progressbar" style="width: 82%"></div>
@@ -85,7 +83,6 @@
     </div>
   </div>
   <br>
-
 {% highlight html %}
 <div class="progress-striped">
   <div class="progress">
@@ -103,7 +100,6 @@
 </div>
 {% endhighlight %}
 
-
   <h2>Animated</h2>
   <div class="bs-example">
     <div class="progress-striped">
@@ -113,7 +109,6 @@
     </div>
   </div>
   <br>
-
 {% highlight html %}
 <div class="progress-striped">
   <div class="progress active">
@@ -132,8 +127,6 @@
     </div>
   </div>
   <br>
-
-
 {% highlight html %}
 <div class="progress">
   <div class="progress-bar progress-primary" style="width: 30%"></div>
@@ -141,8 +134,12 @@
   <div class="progress-bar progress-secondary" style="width: 15%"></div>
   <div class="progress-bar progress-developer" style="width: 5%"></div>
 </div>
+<!-- Workbench footer progress bar -->
+<div class="progress">
+  <div class="progress-bar progress-translating" style="width: 30%"></div>
+  <div class="progress-bar progress-submitted" style="width: 15%"></div>
+  <div class="progress-bar progress-error" style="width: 5%"></div>
+</div>
 {% endhighlight %}
-
-
 
 </div>
