--- a/scss/_progress-bar.scss
+++ b/scss/_progress-bar.scss
@@ -13,3 +13,15 @@
 .progress-developer {
   background-color: $brand-developer;
 }
+
+.progress-translating {
+  background-color: $gengo-blue;
+}
+
+.progress-submitted {
+  background-color: $gengo-lemon;
+}
+
+.progress-error {
+  background-color: $gengo-red;
+}
