[#73271162] add circle logo svg

--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -25,7 +25,7 @@
         <div class="download-links">
           <div class="links">
             <a href="downloads/gengo_logo_circle_png.zip">PNG</a>
-            <a href="#">SVG</a>
+            <a href="downloads/gengo_logo_circle_svg.zip">SVG</a>
           </div>
         </div>
       </div>
