udpate on Tina's feedback

--- a/liquid/_includes/components/helper-classes.html
+++ b/liquid/_includes/components/helper-classes.html
@@ -1,5 +1,6 @@
-<div class="box">
+<div class="box helper-classes">
   <h1 id="helper-classes">Helper classes</h1>
+  <hr/>
 
   <h2>Close icon</h2>
   <div class="bs-example">
