--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -59,9 +59,9 @@ $hover-dark-gray: #413c38 !default;
     background-color: #fff;
   }
   .btn {
-    padding: $padding-base-vertical $padding-base-horizontal;
-    margin: 7.5px 0;
-    font-size: $font-size-small;
+    padding: 4.5px $padding-base-horizontal;
+    margin: 9px 0;
+    font-size: 13px;
   }
   p,
   p > a {
