--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   margin: 0;
 
-  .btn { padding: 3px 10px; }
+  .btn { padding: 2px 10px 5px; }
 
   .form-control {
     padding: 3px 0;
