--- a/liquid/_includes/components/buttons-groups.html
+++ b/liquid/_includes/components/buttons-groups.html
@@ -3,7 +3,7 @@
   <hr/>
 
   <h2>Basic example</h2>
-  <div class="btn-group">
+  <div class="btn-group btn-group-sm">
     <button type="button" class="btn btn-default">Left</button>
     <button type="button" class="btn btn-default">Middle</button>
     <button type="button" class="btn btn-default">Right</button>
@@ -11,7 +11,7 @@
   <br>
   <br>
 {% highlight html %}
-<div class="btn-group">
+<div class="btn-group btn-group-sm">
   <button type="button" class="btn btn-default">Left</button>
   <button type="button" class="btn btn-default">Middle</button>
   <button type="button" class="btn btn-default">Right</button>
@@ -20,7 +20,7 @@
 
   <h2>Button toolbar</h2>
   <div class="btn-toolbar" role="toolbar">
-    <div class="btn-group">
+    <div class="btn-group btn-group-sm">
       <button type="button" class="btn btn-default"><i class="icon-previous"></i></button>
       <button type="button" class="btn btn-default">1</button>
       <button type="button" class="btn btn-default">2</button>
@@ -31,7 +31,7 @@
   <br>
 {% highlight html %}
 <div class="btn-toolbar" role="toolbar">
-  <div class="btn-group">
+  <div class="btn-group btn-group-sm">
     <button type="button" class="btn btn-default"><i class="icon-previous"></i></button>
     <button type="button" class="btn btn-default">1</button>
     <button type="button" class="btn btn-default">2</button>
@@ -145,28 +145,16 @@
 
   <h2>Justified Button Groups</h2>
   <div class="btn-group btn-group-justified">
-    <div class="btn-group">
-      <button type="button" class="btn btn-default">Left</button>
-    </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-default">Middle</button>
-    </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-default">Right</button>
-    </div>
+    <a class="btn btn-default" role="button">Left</a>
+    <a class="btn btn-default" role="button">Middle</a>
+    <a class="btn btn-default" role="button">Right</a>
   </div>
   <br>
 {% highlight html %}
 <div class="btn-group btn-group-justified">
-  <div class="btn-group">
-    <button type="button" class="btn btn-default">Left</button>
-  </div>
-  <div class="btn-group">
-    <button type="button" class="btn btn-default">Middle</button>
-  </div>
-  <div class="btn-group">
-    <button type="button" class="btn btn-default">Right</button>
-  </div>
+  <a class="btn btn-default" role="button">Left</a>
+  <a class="btn btn-default" role="button">Middle</a>
+  <a class="btn btn-default" role="button">Right</a>
 </div>
 {% endhighlight %}
 
