--- a/scss/_progress-bar.scss
+++ b/scss/_progress-bar.scss
@@ -1,3 +1,12 @@
+.progress {
+  height: $progress-bar-height;
+  background-color: $progress-bg;
+}
+
+.progress-bar {
+  line-height: $progress-bar-height;
+}
+
 .progress-primary {
   background-color: $gengo-green;
 }
