somre refactoring on vendor related javascript files & update dependencies

--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -24,15 +24,15 @@ css:
 js:
 - http://code.jquery.com/jquery-1.9.0.js
 - http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js
-- assets/js/moment.min.js
-- assets/js/bootstrap-editable.min.js
-- assets/js/bootstrap-multiselect.js
-- http://vitalets.github.io/x-editable/assets/select2/select2.js
-- assets/js/typeaheadjs.js
-- assets/js/typeahead.js
-- assets/js/address.js
 - http://vitalets.github.io/x-editable/assets/mockjax/jquery.mockjax.js
 - http://vitalets.github.io/x-editable/assets/demo-mock.js
+- assets/js/vendor/moment.min.js
+- assets/js/vendor/bootstrap-editable.min.js
+- assets/js/vendor/bootstrap-multiselect.js
+- assets/js/vendor/select2.min.js
+- assets/js/vendor/typeaheadjs.js
+- assets/js/vendor/typeahead.js
+- assets/js/vendor/address.js
 - assets/js/main.js
 ---
 <!DOCTYPE html>
