--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -171,3 +171,9 @@
 .icon-edit:before {
   content: "\21";
 }
+
+.search-input-icon {
+  background-image: url("../images/search.png");
+  background-repeat: no-repeat;
+  background-position: right 8px bottom 6px;
+}
