--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -52,25 +52,9 @@ input[type="file"] {
   border-top-color: darken($brand-admin, 7%);
 }
 
-.form-search {
-  @extend .icon-search;
-  position: relative;
-
-  &:before {
-    position: absolute;
-    top: 0;
-    right: 8px;
-    bottom: 0;
-    left: auto;
-    margin: auto;
-    height: 58%;
-    font-family: "icomoon";
-    color: #c8c6c5;
-  }
-
-  .form-control {
-    padding-right: 24px;
-  }
+.form-search .form-control {
+  @extend .search-input-icon;
+  padding-right: 24px;
 }
 
 .form-category {
