[#77590150] add back to top btn

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -99,6 +99,18 @@
 .icon-next:before {
   content: "\3e";
 }
+.icon-top {
+  transform: rotate(-90deg);
+  &:before {
+    content: "\3e";
+  }
+}
+.icon-down {
+  transform: rotate(90deg);
+  &:before {
+    content: "\3e";
+  }
+}
 .icon-minimize:before {
   content: "\2c";
 }
