--- a/liquid/_includes/voice/brand-character.html
+++ b/liquid/_includes/voice/brand-character.html
@@ -1,30 +1,22 @@
-<div class="box">
+<div class="box brand-character">
   <h1 id="brand-character">Brand character</h1>
   <hr/>
 
-  <h3>Customer-facing: Airline pilot</h3>
-  <p>We are cool, calm and collected. People trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <h3>Customer-facing: Airline Pilot</h3>
+      <p>We are cool, calm, collected—people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
 
-  <h4>Brand traits</h4>
-  <ul>
-    <li>CONFIDENT but not arrogant</li>
-    <li>POWERFUL but not complicated</li>
-    <li>EFFICIENT but not soulless</li>
-    <li>HELPFUL but not intrusive</li>
-    <li>POLITE but not stuffy</li>
-    <li>WARM but not chummy</li>
-  </ul>
+      <h4>Brand traits:</h4>
+      <img src="./assets/images/voice/c-brand-traits.png" alt="">
+    </div>
+    <div class="col-sm-12 col-md-6">
+      <h3>Translator-facing: Teacher</h3>
+      <p>We are cool, calm, collected—people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
 
-  <h3>Translator-facing: Teacher</h3>
-  <p>We set high expectations for all of our translators and strive to get the best out of them. We exhibit expertise and believe in lifelong learning (kaizen). Our lessons are fun and focused. We have strong relationships with our translators and show we care about them as people. We can be stern but calm when translators behave poorly.</p>
+      <h4>Brand traits:</h4>
+      <img src="./assets/images/voice/t-brand-traits.png" alt="">
+    </div>
+  </div>
 
-  <h4>Brand traits</h4>
-  <ul>
-    <li>INFORMAL but not sloppy</li>
-    <li>STERN but not strict</li>
-    <li>RESPECTFUL but not complacent</li>
-    <li>DIRECT but not confrontational</li>
-    <li>GUIDING but not ordering</li>
-    <li>FUNNY but not goofy</li>
-  </ul>
 </div>
