--- a/liquid/_includes/voice/brand-statements.html
+++ b/liquid/_includes/voice/brand-statements.html
@@ -1,8 +1,13 @@
-<div class="box">
+<div class="box brand-statements">
   <h1 id="brand-statements">Brand statements</h1>
   <hr/>
 
-  <p><strong>Tagline:</strong> Communicate freely.</p>
-  <p><strong>Mission statement:</strong> To help anyone read and publish across languages, with one click.</p>
-  <p><strong>Positioning statement:</strong> Connect to people-powered translation with one click.</p>
+  <h3>Communicate freely.</h3>
+  <p class="small">Tagline</p>
+
+  <h3>To help anyone read and publish across languages, with one click.</h3>
+  <p class="small">Mission statement</p>
+
+  <h3>Connect to people-powered translation with one click.</h3>
+  <p class="small">Positioning statement</p>
 </div>
