--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -145,10 +145,8 @@ body > .container {
 }
 
 .ge-content {
-  margin-top: 24px;
+  margin-top: 15px;
   margin-bottom: 20px;
-  // padding-top: 13px;
-  padding-left: 1px;
 
   h1[id] {
     padding-top: 30px;
@@ -375,6 +373,56 @@ body > .container {
     @include get-image("../images/apple-touch-icons/gengo_a_app", "png", 152px, 152px);
   }
 
+}
+
+
+//
+// Voice Page
+// --------------------------------------------------
+.core-values,
+.brand-statements,
+.voice-and-tone {
+  h3 {
+    color: $gengo-green;
+  }
+}
+
+.core-values,
+.brand-statements {
+  hr { margin-bottom: 32px; }
+  h3 {
+    margin-top: 29px;
+    margin-bottom: 6px;
+  }
+  p {
+    width: 85%;
+    margin-bottom: 6px;
+  }
+  .small {
+    color: $gengo-gray-light;
+    margin-bottom: 3px;
+  }
+}
+.brand-statements {
+  h3 { margin-top: 14px; }
+  .small { margin-bottom: 10px; }
+}
+
+.brand-character {
+  hr { margin-bottom: 10px; }
+  h3 { margin-bottom: 14px; }
+  p { margin-bottom: 32px; }
+  img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 12px;
+  }
+}
+
+.voice-and-tone {
+  hr { margin-bottom: 32px; }
+  h3 { margin-bottom: 16px; }
+  > p { margin-bottom: 0; }
 }
 
 
