--- a/liquid/_includes/voice/users.html
+++ b/liquid/_includes/voice/users.html
@@ -1,34 +1,32 @@
-<div class="box">
+<div class="box users">
   <h1 id="users">Users</h1>
   <hr/>
 
-  <p>Gengo has two main user groups:</p>
-  <ul>
-    <li>Customers</li>
-    <li>Translators</li>
-  </ul>
-
   <p>All of our users are important (by the people, for the people) and our communications should reflect this. If you’re talking about system-wide changes, for example, say “improve your Gengo experience” or “improve the user experience,” not “improve the customer experience.”</p>
 
-  <h3>Who are our customers?</h3>
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <h2>Our <span class="customer">Customers</span> are:</h2>
+      <h3 class="customer">Diverse</h3>
+      <p>They are a mix of individuals, localization project managers, marketing professionals and product staff looking to translate a wide range of content (personal letters, user-generated reviews, product descriptions, etc.). They come from many countries and industries. Some are deeply familiar with translation processes and others are translating for the first time.</p>
 
-  <h4>Diverse</h4>
-  <p>They are a mix of individuals, localization project managers, marketing professionals and product staff looking to translate a wide range of content (personal letters, user-generated reviews, product descriptions, etc.). They come from many countries and industries. Some are deeply familiar with translation processes and others are translating for the first time.</p>
+      <h3 class="customer">Strategic</h3>
+      <p>They are searching for a cheap and efficient alternative to a traditionally expensive and cumbersome process. They make informed decisions based on the intersection of speed, quality and cost.</p>
 
-  <h4>Strategic</h4>
-  <p>They are searching for a cheap and efficient alternative to a traditionally expensive and cumbersome process. They make informed decisions based on the intersection of speed, quality and cost.</p>
+      <h3 class="customer">Busy</h3>
+      <p>They believe in getting things done and dislike unnecessary distractions. They value tools that work well and information that is useful.</p>
+    </div>
+    <div class="col-sm-12 col-md-6">
+      <h2>Our <span class="translator">Translators</span> are:</h2>
+      <h3 class="translator">Free</h3>
+      <p>They pick and choose which jobs they work on and when. Gengo is usually one of many employers and they are free to leave at any time.</p>
 
-  <h4>Busy</h4>
-  <p>They believe in getting things done and dislike unnecessary distractions. They value tools that work well and information that is useful.</p>
+      <h3 class="translator">Smart</h3>
+      <p>They are highly proficient in at least two languages and are talented writers. They are self-starters who are constantly seeking opportunities to learn and grow. They are proud professionals who know their worth. They are tech-savvy and time-conscious.</p>
 
-  <h3>Who are our translators?</h3>
+      <h3 class="translator">Values-driven</h3>
+      <p>They view translating with Gengo as more than a job, seeing it instead as an opportunity to collaborate with language specialists from around the world, develop translation skills and help others do the same. They appreciate our fun and friendly atmosphere. They feel like they are part of our community and have a stake in Gengo’s growth.</p>
+    </div>
+  </div>
 
-  <h4>Free</h4>
-  <p>They pick and choose which jobs they work on and when. Gengo is usually one of many employers and they are free to leave at any time.</p>
-
-  <h4>Smart</h4>
-  <p>They are highly proficient in at least two languages and are talented writers. They are self-starters who are constantly seeking opportunities to learn and grow. They are proud professionals who know their worth. They are tech-savvy and time-conscious.</p>
-
-  <h4>Values-driven</h4>
-  <p>They view translating with Gengo as more than a job, seeing it instead as an opportunity to collaborate with language specialists from around the world, develop translation skills and help others do the same. They appreciate our fun and friendly atmosphere. They feel like they are part of our community and have a stake in Gengo’s growth.</p>
 </div>
