--- a/liquid/_includes/voice/style-guide.html
+++ b/liquid/_includes/voice/style-guide.html
@@ -1,21 +1,21 @@
-<div class="box">
+<div class="box style-guide">
   <h1 id="style-guide">Style guide</h1>
   <hr/>
 
-  <h3>Spelling</h3>
+  <h2>Spelling</h2>
   <ul>
     <li>Use American English, not British English, e.g. realize, not realise</li>
   </ul>
 
-  <h3>Capitalization</h3>
+  <h2>Capitalization</h2>
   <ul>
     <li>Always capitalize our company name, i.e. Gengo, not gengo</li>
-    <li>Use start case for all buttons and navigation menu items (capitalization of all words, regardless of the part of speech)</li>
+    <li>Use start case for all buttons and navigation menu items <br>(capitalization of all words, regardless of the part of speech)</li>
     <li>Use sentence case for general/marketing copy titles</li>
-    <li>Spell out acronyms and abbreviations in capital letters at first mention unless the short form is more common than the long form, e.g. DVD</li>
+    <li>Spell out acronyms and abbreviations in capital letters at first mention <br>unless the short form is more common than the long form, e.g. DVD</li>
   </ul>
 
-  <h3>Numbers</h3>
+  <h2>Numbers</h2>
   <ul>
     <li>Don’t spell out percentages, e.g., 100% not 100 percent</li>
     <li>Don’t spell out small money amounts, e.g., $0.05, not five cents</li>
@@ -44,7 +44,7 @@
     </li>
   </ul>
 
-  <h3>Date and time</h3>
+  <h2>Date and time</h2>
   <ul>
     <li>Format dates as follows:
       <ul>
@@ -59,13 +59,13 @@
     </li>
   </ul>
 
-  <h3>Punctuation and italics</h3>
-  <h4>Periods ( . )</h4>
+  <h2>Punctuation and italics</h2>
+  <h3>Periods ( . )</h3>
   <ul>
     <li>Place periods within quotation marks</li>
   </ul>
 
-  <h4>Commas ( , )</h4>
+  <h3>Commas ( , )</h3>
   <ul>
     <li>Do not use the Oxford comma</li>
     <li>Use a comma to separate two adjectives (if the word “and” can be inserted)</li>
@@ -77,7 +77,7 @@
     <li>Place commas within quotation marks</li>
   </ul>
 
-  <h4>Quotation marks ( “ ” and ‘ ’ )</h4>
+  <h3>Quotation marks ( “ ” and ‘ ’ )</h3>
   <ul>
     <li>Always close quotation marks</li>
     <li>Don't use single quotes unless nesting them within double quotes
@@ -105,7 +105,7 @@
     <li>Semicolons and colons are placed outside of quotation marks</li>
   </ul>
 
-  <h4>Semicolons ( ; )</h4>
+  <h3>Semicolons ( ; )</h3>
   <ul>
     <li>In general, use sparingly</li>
     <li>Use to connect two independent clauses
@@ -120,7 +120,7 @@
     </li>
   </ul>
 
-  <h4>Apostrophes</h4>
+  <h3>Apostrophes</h3>
   <ul>
     <li>Don't use apostrophes for plurals of acronyms, abbreviations and years
     <ul>
@@ -129,7 +129,7 @@
     </li>
   </ul>
 
-  <h4>Hyphens and em dashes</h4>
+  <h3>Hyphens and em dashes</h3>
   <ul>
     <li>Use hyphens (-) in URLs, email addresses, compound words and number spans</li>
     <li>Em dashes (—) often have the same function as commas, parentheses and colons when setting off distinct thoughts within sentences
@@ -146,7 +146,7 @@
     </li>
   </ul>
 
-<h3>Use this, not that</h3>
+<h2>Use this, not that</h2>
 <ul>
   <li>Don’t use the word “immediately” in reference to translation times</li>
   <li>Don't put two spaces in between sentences</li>
@@ -158,7 +158,7 @@
     <thead>
       <tr>
         <th>Use this</th>
-        <th>Instead of this</th>
+        <th>Not this</th>
       </tr>
     </thead>
     <tbody>
@@ -225,7 +225,7 @@
     </tbody>
   </table>
 
-  <h3>Press</h3>
+  <h2>Press</h2>
   <p>Press releases follow AP style. Be careful of differences relative to Gengo style, especially those listed below:</p>
   <ul>
     <li>With headlines, all letters are capitalized regardless of length</li>
