[#77590042] udpate touch icons

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -358,6 +358,7 @@ body > .container {
   [class^="apple-touch-"],
   [class*=" apple-touch-"] {
     display: inline-block;
+    border-radius: 34px;
   }
 
   .apple-touch-customer {
