--- a/liquid/_includes/voice/brand-character.html
+++ b/liquid/_includes/voice/brand-character.html
@@ -8,14 +8,64 @@
       <p>We are cool, calm, collected—people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
 
       <h4>Brand traits:</h4>
-      <img src="./assets/images/voice/c-brand-traits.png" alt="">
+      <ul class="list-unstyled customer">
+        <li>
+          <div class="title">CONFIDENT</div>
+          <div class="txt">but not arrogant</div>
+        </li>
+        <li>
+          <div class="title">POWERFUL</div>
+          <div class="txt">but not complicated</div>
+        </li>
+        <li>
+          <div class="title">EFFICIENT</div>
+          <div class="txt">but not soulless</div>
+        </li>
+        <li>
+          <div class="title">HELPFUL</div>
+          <div class="txt">but not intrusive</div>
+        </li>
+        <li>
+          <div class="title">POLITE</div>
+          <div class="txt">but not stuffy</div>
+        </li>
+        <li>
+          <div class="title">WARM</div>
+          <div class="txt">but not chummy</div>
+        </li>
+      </ul>
     </div>
     <div class="col-sm-12 col-md-6">
       <h3>Translator-facing: Teacher</h3>
       <p>We are cool, calm, collected—people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
 
       <h4>Brand traits:</h4>
-      <img src="./assets/images/voice/t-brand-traits.png" alt="">
+      <ul class="list-unstyled translator">
+        <li>
+          <div class="title">INFORMAL</div>
+          <div class="txt">but not sloppy</div>
+        </li>
+        <li>
+          <div class="title">STERN</div>
+          <div class="txt">but not strict</div>
+        </li>
+        <li>
+          <div class="title">RESPECTFUL</div>
+          <div class="txt">but not complacent</div>
+        </li>
+        <li>
+          <div class="title">DIRECT</div>
+          <div class="txt">but not confrontional</div>
+        </li>
+        <li>
+          <div class="title">GUIDING</div>
+          <div class="txt">but not ordering</div>
+        </li>
+        <li>
+          <div class="title">FUNNY</div>
+          <div class="txt">but not goofy</div>
+        </li>
+      </ul>
     </div>
   </div>
 
