--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -1,7 +1,5 @@
 ---
 navigation:
-- text: Style
-  url: style.html
 - text: Voice
   url: voice.html
 - text: Components
@@ -59,10 +57,13 @@ js:
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html"></a>
+        <a class="navbar-brand" href="./"></a>
       </div>
       <nav class="collapse navbar-collapse ge-navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
+          <li class="{% if page.name == 'index.html' %}active{% elsif page.name == 'style.html' %}active{% endif %}">
+            <a href="style.html">Style</a>
+          </li>
         {% for link in page.navigation %}
           <li class="{% if page.name == link.url %}active{% endif %}">
             <a href="{{link.url}}">{{link.text}}</a>
